# swarm-hug

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  PROMPT.md  README.md  SPECS.md  TASKS.md  TESTING.md  init.sh  init_lima.sh  lima_connect.sh
.claude/: settings.local.json
.juliet/: .gitignore
.juliet/dev/: prompt.md
.swarm-hug/: .gitignore  assignments.toml  email.txt
.swarm-hug/agent-hashes/: prompt.md  specs.md  sprint-history.json  tasks.md  team-state.json
.swarm-hug/agent-process-lifecycle/: prompt.md  specs.md  sprint-history.json  tasks.md  team-state.json
.swarm-hug/cleanup-help/: prompt.md  specs.md  sprint-history.json  tasks.md
.swarm-hug/followup-tasks-write-path/: prompt.md  specs.md  sprint-history.json  tasks.md  team-state.json
prds/: agent-process-lifecycle.md  agent-worktree-namespacing.md  followup-tasks-write-path.md  help-cleanup.md  lima-connect.md  per-task-engine-selection.md  refactor_sweep.md  refinements.md  sprint-branch-ordering.md  target-branch-worktree.md  worktree-overhaul.md
prompts/: agent.md  merge_agent.md  prd_to_tasks.md  review.md  scrum_master.md
src/: agent.rs  chat.rs  color.rs  config.rs  engine.rs  git.rs  heartbeat.rs  lib.rs  lifecycle.rs  log.rs  main.rs  merge_agent.rs  output.rs  planning.rs  process.rs  process_group.rs  process_registry.rs  project.rs  prompt.rs  run_context.rs  run_hash.rs  runner.rs  shutdown.rs  tail.rs  task.rs  team.rs  testutil.rs  tui.rs  worktree.rs
tasks/: lessons.md  todo.md
tests/: integration.rs  process_cleanup_integration.rs  process_registry_integration.rs
(+103 files in other folders)
