[package]
name = "swarm"
version = "0.2.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
crossterm = "0.28"
ctrlc = "3.4"
once_cell = "1"
rand = "0.8"
ratatui = "0.29"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
